# internal/interface/grpc/handlers/introspector_handler.go
@@ -2,9 +2,14 @@ package handlers
 
 import (
 	"context"
+	"fmt"
+	"strings"
 
+	"github.com/arkade-os/arkd/pkg/ark-lib/intent"
+	"github.com/arkade-os/arkd/pkg/ark-lib/tree"
 	introspectorv1 "github.com/arkade-os/introspector/api-spec/protobuf/gen/introspector/v1"
 	"github.com/arkade-os/introspector/internal/application"
+	"github.com/btcsuite/btcd/btcutil/psbt"
 	"google.golang.org/grpc/codes"
 	"google.golang.org/grpc/status"
 )
@@ -46,18 +51,239 @@ func (h *handler) SubmitTx(
 		return nil, status.Error(codes.InvalidArgument, "missing checkpoint txs")
 	}
 
+	arkPtx, err := psbt.NewFromRawBytes(strings.NewReader(arkTx), true)
+	if err != nil {
+		return nil, status.Error(codes.InvalidArgument, "invalid ark tx")
+	}
+
+	checkpointPsbt := make([]*psbt.Packet, 0)
+	for _, checkpoint := range checkpoints {
+		checkpointPtx, err := psbt.NewFromRawBytes(strings.NewReader(checkpoint), true)
+		if err != nil {
+			return nil, status.Error(codes.InvalidArgument, "invalid checkpoint tx")
+		}
+		checkpointPsbt = append(checkpointPsbt, checkpointPtx)
+	}
+
 	offchainTx := application.OffchainTx{
-		ArkTx:       arkTx,
-		Checkpoints: checkpoints,
+		ArkTx:       arkPtx,
+		Checkpoints: checkpointPsbt,
 	}
 
 	approvedTx, err := h.svc.SubmitTx(ctx, offchainTx)
 	if err != nil {
-		return nil, err
+		return nil, status.Error(codes.Internal, err.Error())
+	}
+
+	encodedArkTx, err := approvedTx.ArkTx.B64Encode()
+	if err != nil {
+		return nil, status.Error(codes.Internal, "failed to encode ark tx")
+	}
+
+	encodedCheckpointTxs := make([]string, 0)
+	for _, checkpoint := range approvedTx.Checkpoints {
+		encodedCheckpointTx, err := checkpoint.B64Encode()
+		if err != nil {
+			return nil, status.Error(codes.Internal, "failed to encode checkpoint tx")
+		}
+		encodedCheckpointTxs = append(encodedCheckpointTxs, encodedCheckpointTx)
 	}
 
 	return &introspectorv1.SubmitTxResponse{
-		SignedArkTx:         approvedTx.ArkTx,
-		SignedCheckpointTxs: approvedTx.Checkpoints,
+		SignedArkTx:         encodedArkTx,
+		SignedCheckpointTxs: encodedCheckpointTxs,
+	}, nil
+}
+
+func (h *handler) SubmitIntent(
+	ctx context.Context, req *introspectorv1.SubmitIntentRequest,
+) (*introspectorv1.SubmitIntentResponse, error) {
+	unsignedIntent := req.GetIntent()
+
+	if unsignedIntent == nil {
+		return nil, status.Error(codes.InvalidArgument, "missing intent")
+	}
+
+	intent, err := parseIntent(unsignedIntent)
+	if err != nil {
+		return nil, status.Error(codes.InvalidArgument, fmt.Sprintf("invalid intent: %v", err))
+	}
+
+	signedIntentProof, err := h.svc.SubmitIntent(ctx, *intent)
+	if err != nil {
+		return nil, status.Error(codes.Internal, err.Error())
+	}
+
+	encodedProof, err := signedIntentProof.B64Encode()
+	if err != nil {
+		return nil, status.Error(codes.Internal, "failed to encode proof")
+	}
+	
+	return &introspectorv1.SubmitIntentResponse{
+		SignedProof: encodedProof,
+	}, nil
+}
+
+func (h *handler) SubmitFinalization(
+	ctx context.Context, req *introspectorv1.SubmitFinalizationRequest,
+) (*introspectorv1.SubmitFinalizationResponse, error) {
+	signedIntent := req.GetSignedIntent()
+	forfeitTxs := req.GetForfeits()
+	connectorTree := req.GetConnectorTree()
+	vtxoTree := req.GetVtxoTree()
+	commitmentTx := req.GetCommitmentTx()
+
+	if signedIntent == nil {
+		return nil, status.Error(codes.InvalidArgument, "missing signed intent")
+	}
+
+	intent, err := parseIntent(signedIntent)
+	if err != nil {
+		return nil, status.Error(codes.InvalidArgument, fmt.Sprintf("invalid signed intent: %v", err))
+	}
+	
+	if len(commitmentTx) <= 0 {
+		return nil, status.Error(codes.InvalidArgument, "missing commitment tx")
+	}
+
+	commitmentPtx, err := psbt.NewFromRawBytes(strings.NewReader(commitmentTx), true)
+	if err != nil {
+		return nil, status.Error(codes.InvalidArgument, "invalid commitment tx")
+	}
+
+	forfeitPsbt := make([]*psbt.Packet, 0)
+	for _, forfeit := range forfeitTxs {
+		forfeitPtx, err := psbt.NewFromRawBytes(strings.NewReader(forfeit), true)
+		if err != nil {
+			return nil, status.Error(codes.InvalidArgument, "invalid forfeit tx")
+		}
+		forfeitPsbt = append(forfeitPsbt, forfeitPtx)
+	}
+
+	batchFinalization := application.BatchFinalization{
+		Intent: *intent,
+		Forfeits: forfeitPsbt,
+		CommitmentTx: commitmentPtx,
+	}
+
+	if len(forfeitPsbt) > 0 {
+		if len(connectorTree) <= 0 {
+			return nil, status.Error(codes.InvalidArgument, "missing connector tree")
+		}
+		if len(vtxoTree) <= 0 {
+			return nil, status.Error(codes.InvalidArgument, "missing vtxo tree")
+		}
+
+		connectorTxTree, err := parseTxTree(connectorTree)
+		if err != nil {
+			return nil, status.Error(codes.InvalidArgument, fmt.Sprintf("invalid connector tree: %v", err))
+		}
+
+		if err := verifyTreeRelatedToCommitment(commitmentPtx, connectorTxTree); err != nil {
+			return nil, status.Error(codes.InvalidArgument, fmt.Sprintf("invalid connector tree: %v", err))
+		}
+
+		vtxoTxTree, err := parseTxTree(vtxoTree)
+		if err != nil {
+			return nil, status.Error(codes.InvalidArgument, fmt.Sprintf("invalid vtxo tree: %v", err))
+		}
+
+		if err := verifyTreeRelatedToCommitment(commitmentPtx, vtxoTxTree); err != nil {
+			return nil, status.Error(codes.InvalidArgument, fmt.Sprintf("invalid vtxo tree: %v", err))
+		}
+	}
+
+	signedBatchFinalization, err := h.svc.SubmitFinalization(ctx, batchFinalization)
+	if err != nil {
+		return nil, status.Error(codes.Internal, err.Error())
+	}
+
+	encodedForfeits := make([]string, 0)
+	for _, forfeit := range signedBatchFinalization.Forfeits {
+		encodedForfeit, err := forfeit.B64Encode()
+		if err != nil {
+			return nil, status.Error(codes.Internal, "failed to encode forfeit")
+		}
+		encodedForfeits = append(encodedForfeits, encodedForfeit)
+	}
+
+	encodedCommitmentTx, err := signedBatchFinalization.CommitmentTx.B64Encode()
+	if err != nil {
+		return nil, status.Error(codes.Internal, "failed to encode commitment tx")
+	}
+
+	return &introspectorv1.SubmitFinalizationResponse{
+		SignedForfeits: encodedForfeits,
+		SignedCommitmentTx: encodedCommitmentTx,
+	}, nil
+}
+
+func verifyTreeRelatedToCommitment(commitmentPtx *psbt.Packet, txTree *tree.TxTree) error {
+	if len(txTree.Root.Inputs) != len(commitmentPtx.UnsignedTx.TxIn) {
+		return fmt.Errorf("invalid number of inputs")
+	}
+	if len(txTree.Root.UnsignedTx.TxIn) != 1 {
+		return fmt.Errorf("invalid tx tree root")
+	}
+
+	rootInput := txTree.Root.UnsignedTx.TxIn[0]
+	if rootInput.PreviousOutPoint.Hash.String() != commitmentPtx.UnsignedTx.TxID() {
+		return fmt.Errorf("root is not commitment tx")
+	}
+
+	if int(rootInput.PreviousOutPoint.Index) >= len(commitmentPtx.UnsignedTx.TxOut) {
+		return fmt.Errorf("root input index out of range")
+	}
+
+	return nil
+}
+
+func parseTxTree(fromProto []*introspectorv1.TxTreeNode) (*tree.TxTree, error) {
+	flat := make(tree.FlatTxTree, 0)
+	for _, node := range fromProto {
+		flat = append(flat, tree.TxTreeNode{
+			Txid: node.GetTxid(),
+			Tx: node.GetTx(),
+			Children: node.GetChildren(),
+		})
+	}
+
+	txTree, err := tree.NewTxTree(flat)
+	if err != nil {
+		return nil, fmt.Errorf("failed to create tx tree: %w", err)
+	}
+	if err := txTree.Validate(); err != nil {
+		return nil, fmt.Errorf("invalid tx tree: %w", err)
+	}
+
+	return txTree, nil
+}
+
+func parseIntent(fromProto *introspectorv1.Intent) (*application.Intent, error) {
+	proof := fromProto.GetProof()
+	message := fromProto.GetMessage()
+
+	if len(proof) <= 0 {
+		return nil, fmt.Errorf("missing proof")
+	}
+
+	if len(message) <= 0 {
+		return nil, fmt.Errorf("missing message")
+	}
+
+	proofPsbt, err := psbt.NewFromRawBytes(strings.NewReader(proof), true)
+	if err != nil {
+		return nil, fmt.Errorf("invalid proof: %w", err)
+	}
+
+	var registerMessage intent.RegisterMessage
+	if err := registerMessage.Decode(message); err != nil {
+		return nil, fmt.Errorf("invalid message: %w", err)
+	}
+
+	intentProof := intent.Proof{Packet: *proofPsbt}
+	return &application.Intent{
+		Proof: intentProof,
+		Message: registerMessage,
 	}, nil
 }
